tests/spec/parse/snapshots/spread_struct_in_binary_rhs_allowed.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Bar { x: int }
  fn test(base: Bar) {
    let foo = 1;
    if foo < Bar { ..base } { true } else { false }
  }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Bar",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 3,
        },
        generics: [],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "x",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 14,
                        byte_length: 1,
                    },
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 17,
                            byte_length: 3,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 21,
        },
    },
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 26,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "base",
                    span: Span {
                        file_id: 0,
                        byte_offset: 31,
                        byte_length: 4,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Bar",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 37,
                            byte_length: 3,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "foo",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 50,
                                    byte_length: 3,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: Integer {
                                value: 1,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 56,
                                byte_length: 1,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 46,
                            byte_length: 11,
                        },
                    },
                    If {
                        condition: Binary {
                            operator: LessThan,
                            left: Identifier {
                                value: "foo",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 64,
                                    byte_length: 3,
                                },
                                resolution: Unresolved,
                            },
                            right: StructCall {
                                name: "Bar",
                                field_assignments: [],
                                spread: From(
                                    Identifier {
                                        value: "base",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 78,
                                            byte_length: 4,
                                        },
                                        resolution: Unresolved,
                                    },
                                ),
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 70,
                                    byte_length: 14,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 64,
                                byte_length: 20,
                            },
                        },
                        consequence: Block {
                            items: [
                                Literal {
                                    literal: Boolean(
                                        true,
                                    ),
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 87,
                                        byte_length: 4,
                                    },
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 85,
                                byte_length: 8,
                            },
                        },
                        alternative: Some(
                            Block {
                                items: [
                                    Literal {
                                        literal: Boolean(
                                            false,
                                        ),
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 101,
                                            byte_length: 5,
                                        },
                                    },
                                ],
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 99,
                                    byte_length: 9,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 61,
                            byte_length: 47,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 42,
                    byte_length: 68,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 23,
            byte_length: 87,
        },
    },
]
