tests/spec/parse/snapshots/standalone_range_to_binding.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() { let r: RangeTo<int> = ..5; }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "r",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 17,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: Some(
                                Constructor {
                                    name: "RangeTo",
                                    params: [
                                        Constructor {
                                            name: "int",
                                            params: [],
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 28,
                                                byte_length: 3,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 20,
                                        byte_length: 12,
                                    },
                                },
                            ),
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Range {
                            start: None,
                            end: Some(
                                Literal {
                                    literal: Integer {
                                        value: 5,
                                        text: None,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 37,
                                        byte_length: 1,
                                    },
                                },
                            ),
                            inclusive: false,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 35,
                                byte_length: 3,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 25,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 30,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 40,
        },
    },
]
