tests/spec/parse/snapshots/struct_autofill_trailing_comma.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() { let p = Point { x: 1, .., }; }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "p",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 17,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: StructCall {
                            name: "Point",
                            field_assignments: [
                                StructFieldAssignment {
                                    name: "x",
                                    name_span: Span {
                                        file_id: 0,
                                        byte_offset: 29,
                                        byte_length: 1,
                                    },
                                    value: Literal {
                                        literal: Integer {
                                            value: 1,
                                            text: None,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 32,
                                            byte_length: 1,
                                        },
                                    },
                                },
                            ],
                            spread: Autofill {
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 35,
                                    byte_length: 2,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 21,
                                byte_length: 19,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 27,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 32,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 42,
        },
    },
]
