tests/spec/parse/snapshots/struct_complex_field_types.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Request<Body> {
    method: string,
    headers: Map<string, string>,
    body: Option<Body>,
  }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Request",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 7,
        },
        generics: [
            Generic {
                name: "Body",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 16,
                    byte_length: 4,
                },
            },
        ],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    attributes: [],
                    name: "method",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 26,
                        byte_length: 6,
                    },
                    annotation: Constructor {
                        name: "string",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 34,
                            byte_length: 6,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    embedded: false,
                },
                StructFieldDefinition {
                    doc: None,
                    attributes: [],
                    name: "headers",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 44,
                        byte_length: 7,
                    },
                    annotation: Constructor {
                        name: "Map",
                        params: [
                            Constructor {
                                name: "string",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 57,
                                    byte_length: 6,
                                },
                            },
                            Constructor {
                                name: "string",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 65,
                                    byte_length: 6,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 53,
                            byte_length: 19,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    embedded: false,
                },
                StructFieldDefinition {
                    doc: None,
                    attributes: [],
                    name: "body",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 76,
                        byte_length: 4,
                    },
                    annotation: Constructor {
                        name: "Option",
                        params: [
                            Constructor {
                                name: "Body",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 89,
                                    byte_length: 4,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 82,
                            byte_length: 12,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    embedded: false,
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 96,
        },
    },
]
